
package Potato.ProtoBuf.AssetDB;

// we want to be able to make requests to the asset db
// todo the following:
// add a new asset.
// delete a asset.
// rename a asset.
// get the info about a asset?
// update asset info.

enum AssetType {
    MODEL = 1;
    ANIM = 2;
    MATERIAL = 3;
    IMG = 4;
}

enum Result {
    OK = 1;
    NOT_FOUND = 2;
    NAME_TAKEN = 3;
    UNCHANGED = 4;
    ERROR = 5;
}

message Reponse {
    required Result result = 1;
    required string error = 2;
}
message AssetInfoResponse {
    required Result result = 1;
    required string error = 2;

    required string name = 3;
    required AssetType type = 4;
    required uint32 id = 5;
    required uint32 modId = 6;
}
message ModInfoResponse {
    required Result result = 1;
    required string error = 2;

    required uint32 modId = 3;
    required string name = 4;
    required string path = 5;
}



message AddAsset {
    required string name = 1;
    required AssetType type = 2;
}

message DeleteAsset {
    required string name = 1;
    required AssetType type = 2;
}

message RenameAsset {
    required string name = 1;
    required string newName = 2;
    required AssetType type = 3;
}

message UpdateAsset {
    required string name = 1;
    required AssetType type = 2;
    optional string args= 3;
    optional uint32 dataSize = 4;
}

message AssetExists {
    required string name = 1;
    required AssetType type = 2;
}

message ModInfo {
    required uint32 modId = 1;
}

message Request {
    oneof msg {
        AddAsset add = 1;
        DeleteAsset del = 2;
        RenameAsset rename = 3;
        UpdateAsset update = 4;
        AssetExists exists  = 5;
        ModInfo modInfo = 6;
    }
}
